--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ Simulations/WSM_Simulations
 Simulations/SparseDictionaryLearning1
 Simulations/SparseDictionaryLearningNew
 Simulations/SparseDictionaryLearningNew2
+Untitled*
